# git-dropstitch

./: Cargo.toml  Makefile
.github/steps/: lint.sh
.github/workflows/: rust.yml
lib/: Cargo.toml
lib/src/: dropstitch.rs  error.rs  lib.rs
src/: main.rs
tests/: bdd.rs
tests/features/: undo.feature
tests/fixtures/mock-repo/git/: COMMIT_EDITMSG  HEAD  ORIG_HEAD  config  index  packed-refs
tests/fixtures/mock-repo/git/logs/: HEAD
tests/fixtures/mock-repo/git/logs/refs/heads/: amend-amend  amend-merge  master
tests/fixtures/mock-repo/git/objects/pack/: pack-7824f4a050b553ad33834344bceadc7b8dc01ea8.idx  pack-7824f4a050b553ad33834344bceadc7b8dc01ea8.pack
tests/fixtures/mock-repo/git/refs/heads/: amend-amend  amend-merge  master
