[package]
name = "gds_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
ratatui = "0.26.2"
thiserror = "1.0.59"
log = "0.4.21"
strum = { version = "0.26.2", features = ["derive"] }
cucumber = "0.21.0"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
regex = "1.10.4"
anyhow = "1.0.82"
