[package]
name = "gds_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "1.0.59"
strum = { version = "0.26.2", features = ["derive"] }
cucumber = "0.21.0"
regex = "1.10.4"
anyhow = "1.0.82"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.117"
